refactor(control)!: remove snapshots and remote control
